Fixed responsiveness for landscape mode on mobile devices

--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -17,7 +17,6 @@ html, body {
     font-family: 'Poppins', Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.6rem;
     height: 100%;
-    min-height: 100vh;
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -25,7 +24,7 @@ html, body {
 
 #app {
     display: flex;
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 main {
